Do not use Java 21 APIs